--- a/.gitignore
+++ b/.gitignore
@@ -519,3 +519,5 @@ $RECYCLE.BIN/
 volume/**
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,go,goland,goland+iml,goland+all,jetbrains,jetbrains+iml,jetbrains+all,visualstudiocode
+golang-lambda-localstack-hot-reload
+go-lambda
